--- a/cat1.css
+++ b/cat1.css
@@ -18,6 +18,7 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+
 .logo img {
     height: 50px;
 }
@@ -68,9 +69,10 @@ header {
 }
 
 .article img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
+    max-width: 200px; /* Limite la largeur maximale de l'image */
+    height: auto; /* Maintient le ratio d'aspect */
+    display: block;
+    margin: 0 auto; /* Centrer l'image */
 }
 
 .article h2 {
